--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,18 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+}
+
+.links {
+  display: flex;
+  flex: 1;
+  gap: 16px;
+}
+.notifications {
+  /* flex: 1; */
 }
 
 .profile-image {
