--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -5,11 +5,15 @@ body {
 img {
   width: 100px;
   height: 100px;
+  
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +27,15 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.images-box {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+
+body {
+  text-align: center;
 }
